# RULA

./: CMakeLists.txt  a.out  compile.sh  rula_elavuation
include/: angle_calculation.h  data_transmitter.hpp  rula_score_computation.h  skeleton_receiver.h
src/: angle_calculation.cpp  prova.cpp  rula_evaluation.cpp  rula_score_computation.cpp
